<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalleLibro">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/lbltitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo" />


        <TextView
            android:id="@+id/lblautor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAutor" />


        <TextView
            android:id="@+id/lblgenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGenero" />


        <TextView
            android:id="@+id/lblcod_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCodigoISBN" />


        <TextView
            android:id="@+id/lblcant_dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLibrosDisponibles" />


        <TextView
            android:id="@+id/lblcant_ocup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblLibrosOcupados" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnVolver" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnGuardar" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>